--- a/KDZ_CRM_MoiseevR/App.config
+++ b/KDZ_CRM_MoiseevR/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="KDZ_CRM_MoiseevR.Properties.Settings.CRM_beConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\CRM_be.mdb"
+            providerName="System.Data.OleDb" />
+        <add name="KDZ_CRM_MoiseevR.Properties.Settings.CRM_beConnectionString1"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=D:\CRM\CRM_be.mdb"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
