--- a/KDZ_CRM_MoiseevR/App.config
+++ b/KDZ_CRM_MoiseevR/App.config
@@ -9,6 +9,9 @@
         <add name="KDZ_CRM_MoiseevR.Properties.Settings.CRM_beConnectionString1"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=D:\CRM\CRM_be.mdb"
             providerName="System.Data.OleDb" />
+        <add name="KDZ_CRM_MoiseevR.Properties.Settings.CRM_DatabaseConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\CRM_Database.mdb"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
