--- a/KDZ_CRM_MoiseevR/packages.config
+++ b/KDZ_CRM_MoiseevR/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Office.Interop.Access.Dao" version="15.0.4420.1017" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net452" />
 </packages>
